--- a/find.html
+++ b/find.html
@@ -70,7 +70,7 @@
         <h5 class="find__title">Recommended Friends</h5>
         <li class="find__friend friend friend--lg">
           <div class="friend__column">
-            <img src="images/profile.jpg" class="g-profile friend-profile" />
+            <img src="images/profile.jpg" class="friend-profile" />
             <div class="friend__content">
               <span class="friend__name">name</span>
             </div>
@@ -107,5 +107,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small.</span>
+    </div>
   </body>
 </html>
