--- a/more.html
+++ b/more.html
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="friend__column">
-            <i class="far fa-comment-alt fa-2x"></i>
+            <i class="far fa-comment-alt"></i>
           </div>
         </div>
         <ul class="more__btn-list">
@@ -131,5 +131,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small.</span>
+    </div>
   </body>
 </html>
