--- a/settings.html
+++ b/settings.html
@@ -36,7 +36,7 @@
         </span>
       </div>
     </header>
-    <main class="setting">
+    <main class="settings">
       <section class="settings__sections">
         <ul class="settings__list">
           <li class="setting__setting">
@@ -60,5 +60,8 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small.</span>
+    </div>
   </body>
 </html>
