--- a/friends.html
+++ b/friends.html
@@ -39,7 +39,7 @@
     </header>
     <main class="friends">
       <header class="friends__header">
-        <div class="friends__friend friend friend--lg">
+        <div class="friends__friend friend">
           <div class="friend__column">
             <img src="images/profile.jpg" class="g-profile friend-profile" />
             <div class="friend__content">
@@ -53,7 +53,7 @@
         <h5 class="friends__plus-title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/profile.jpg" class="g-profile friend-profile" />
+            <img src="images/profile.jpg" class="friend-profile" />
             <div class="friend__content">
               <span class="friend__name">Plus Friend</span>
             </div>
@@ -62,9 +62,9 @@
       </div>
       <ul class="friends__list">
         <h5 class="friends__title">Friends 14</h5>
-        <li class="friends__friend friend friend--lg">
+        <li class="friends__friend friend">
           <div class="friend__column">
-            <img src="images/profile.jpg" class="g-profile friend-profile" />
+            <img src="images/profile.jpg" class="friend-profile" />
             <div class="friend__content">
               <span class="friend__name">name</span>
               <span class="friend__status">nomad</span>
@@ -103,5 +103,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small.</span>
+    </div>
   </body>
 </html>
