--- a/index.html
+++ b/index.html
@@ -43,15 +43,22 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img class="chat__profile g-profile" src="images/profile.jpg" />
-              <div class="caht__content">
-                <span class="chat__username">Lynn</span>
-                <span class="chat__preview">Going home</span>
+            <div class="chat__friend friend friend--lg">
+              <div class="friend__column">
+                <img
+                  src="images/profile.jpg"
+                  class="m-profile friend-profile"
+                />
+                <div class="friend__content">
+                  <span class="friend__name">Lynn</span>
+                  <span class="friend__status">Going home</span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp"></span>
+              <div class="friend__column">
+                <div class="friend__now-listening">
+                  <span class="chat__timestamp">March 8</span>
+                </div>
+              </div>
             </div>
           </a>
         </li>
@@ -66,6 +73,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav__badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
@@ -81,5 +89,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen__text">Please make your screen small.</span>
+    </div>
   </body>
 </html>
