--- a/friends.html
+++ b/friends.html
@@ -50,7 +50,7 @@
         </div>
       </header>
       <div class="friends__plus">
-        <h5 class="friends__plus-title">Plus friend</h5>
+        <h5 class="friends__title">Plus friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
             <img src="images/profile.jpg" class="friend-profile" />
